--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.31",
+    "yup": "^0.32.9",
+    "yup-locale-pt": "^0.0.6"
+  },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.31",
     "@types/yup": "^0.29.11",
@@ -25,17 +41,5 @@
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.2",
     "typescript": "^4.2.2"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.4.1",
-    "multer": "^1.4.2",
-    "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.31",
-    "yup": "^0.32.9",
-    "yup-locale-pt": "^0.0.6"
   }
 }
